--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -36,7 +36,7 @@
             overflow-x: hidden;
             padding-top: 4rem;
             transition: 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
-            font-family: "Bebas Neue";
+        {#font-family: "Bebas Neue";#}
         }
 
         .sidenav a {
