--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,18 +1,13 @@
 {% extends "base_page.html" %}
 
-{% block pagetitle %}
-    All lessons
-{% endblock %}
+{#{% block pagetitle %}#}
+{#{% endblock %}#}
+{##}
+{#{% block page-title %}#}
+{#{% endblock %}#}
 
-{% block page-title %}
-    <p style="font-size:50px;" xmlns="http://www.w3.org/1999/html">Список слов по
-        урокам </p>
-{% endblock %}
-
-{% block page-lead %}
-    <p class="fst-italic" style="font-size:25px;">Список всех уроков, слов и их
-        переводов </p>
-{% endblock %}
+{#{% block page-lead %}#}
+{#{% endblock %}#}
 
 {% block content %}
 
@@ -22,7 +17,7 @@
         IDG RAS
         <style>
             .btn {
-                float: left;
+                float: right;
                 display: inline-block;
                 background: #c1d1d3;
                 font-size: 16px;
@@ -36,8 +31,8 @@
                 background: #9aa9ab;
             }
         </style>
-{#        <a href="/" class="btn" style="float: right;">На главную страницу</a>#}
-        <a href="/" class="btn" style="float: right;">To Home Page</a>
+        {#        <a href="/" class="btn" style="float: right;">На главную страницу</a>#}
+        <a href="/" class="btn">To Home Page</a>
         <br/>
         <br/>
         Address: 38k1, Leninsky prospekt, Moscow, Russia, 119334
