--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,10 +1,8 @@
 {% extends "base_page.html" %}
 
-{#{% block pagetitle %}#}
-{#{% endblock %}#}
-{##}
-{#{% block page-title %}#}
-{#{% endblock %}#}
+{% block pagetitle %}
+    Contacts
+{% endblock %}
 
 {#{% block page-lead %}#}
 {#{% endblock %}#}
