--- a/templates/date_selection.html
+++ b/templates/date_selection.html
@@ -185,7 +185,10 @@
                 <div class="footer-container-calendar">
                     <label for="month" style="font-family: 'Roboto', sans-serif;">Select
                         month and year </label>
+                    {#                    <form method="post" onsubmit="submitMonth()">#}
                     <select id="month" onchange="jump()">
+                        {#                    <form method="get" id="Month">#}
+                        {#                        <select id="month" onchange="document.getElementById('Month').submit()">#}
                         <option value=0>Jan</option>
                         <option value=1>Feb</option>
                         <option value=2>Mar</option>
@@ -199,7 +202,12 @@
                         <option value=10>Nov</option>
                         <option value=11>Dec</option>
                     </select>
+                    {#                    <input type="hidden" id="selected_new_month" name="selected_new_month" value="">#}
+                    {#                    <input type="hidden" id="new_month" name="new_month" value="">#}
+                    {#                    <input type="submit" onclick="">#}
+                    {#                    </form>#}
                     <select id="year" onchange="jump()"></select>
+                    {#                    <input type="hidden" id="new_year" name="new_year" value="">#}
                 </div>
             </div>
         </div>
@@ -293,73 +301,96 @@
                 currentYear = parseInt(selectYear.value);
                 currentMonth = parseInt(selectMonth.value);
                 showCalendar(currentMonth, currentYear);
-            }
+                {#let el = document.querySelector('#month');#}
+                {#el.addEventListener('change', function () {#}
+                {#    document.location.reload();#}
+                {#})#}
+                }
 
-            function showCalendar(month, year) {
-                var firstDay = (new Date(year, month, 7)).getDay();
-                tbl = document.getElementById("calendar-body");
-                tbl.innerHTML = "";
-                monthAndYear.innerHTML = months[month] + " " + year;
-                selectYear.value = year;
-                selectMonth.value = month;
+                {#const new_month = document.getElementById("month")#}
+                {#new_month.value = currentMonth;#}
+                {#d = document.getElementById("month").value;#}
+                {#const new_year = document.getElementById("year");#}
+                {#new_year.value = currentYear;#}
+                {#const selected_new_month = document.getElementById("selected_new_month");#}
+                {#selected_new_month.value = 'selected';#}
+                {#location.href = "./qqq.php";#}
+                {#alert(d);#}
+                {#}#}
 
-                // creating all cells
-                let avail_days = {{ avail_days }};
-                let date = 1;
-                for (let i = 0; i < 7; i++) {
-                    let row = document.createElement("tr");
-                    for (let j = 0; j < 7; j++) {
-                        if (i === 0 && j < firstDay) {
-                            cell = document.createElement("td");
-                            cellText = document.createTextNode("");
-                            cell.appendChild(cellText);
-                            row.appendChild(cell);
-                        } else if (date > daysInMonth(month, year)) {
-                            break;
-                        } else {
-                            cell = document.createElement("td");
-                            cell.setAttribute("data-date", date);
-                            cell.setAttribute("data-month", month + 1);
-                            cell.setAttribute("data-year", year);
-                            cell.setAttribute("data-month_name", months[month]);
-                            cell.className = "date-picker";
-                            cell.innerHTML = "<span>" + date + "</span>";
+                    function showCalendar(month, year) {
+                        var firstDay = (new Date(year, month, 7)).getDay();
+                        tbl = document.getElementById("calendar-body");
+                        tbl.innerHTML = "";
+                        monthAndYear.innerHTML = months[month] + " " + year;
+                        selectYear.value = year;
+                        selectMonth.value = month;
 
-                            today = new Date();
-                            if (date === today.getDate() && year === today.getFullYear() && month === today.getMonth()) {
-                                cell.className = "date-picker selected";
+                        // creating all cells
+                        let avail_days = {{ avail_days }};
+                        let date = 1;
+                        for (let i = 0; i < 7; i++) {
+                            let row = document.createElement("tr");
+                            for (let j = 0; j < 7; j++) {
+                                if (i === 0 && j < firstDay) {
+                                    cell = document.createElement("td");
+                                    cellText = document.createTextNode("");
+                                    cell.appendChild(cellText);
+                                    row.appendChild(cell);
+                                } else if (date > daysInMonth(month, year)) {
+                                    break;
+                                } else {
+                                    cell = document.createElement("td");
+                                    cell.setAttribute("data-date", date);
+                                    cell.setAttribute("data-month", month + 1);
+                                    cell.setAttribute("data-year", year);
+                                    cell.setAttribute("data-month_name", months[month]);
+                                    cell.className = "date-picker";
+                                    cell.innerHTML = "<span>" + date + "</span>";
+
+                                    today = new Date();
+                                    if (date === today.getDate() && year === today.getFullYear() && month === today.getMonth()) {
+                                        cell.className = "date-picker selected";
+                                    }
+                                    cell.date = `${date}`
+                                    // cell.setAttribute("style", "textColor=#fff")
+                                    for (let d of avail_days) {
+                                        if (d !== date) {
+                                            continue;
+                                        }
+                                        cell.style.fontWeight = 'bold';
+                                        cell.style.textDecoration = "underline";
+                                        cell.addEventListener("click", function (event) {
+                                            var cell_date = event.currentTarget.date
+                                            // noinspection EqualityComparisonWithCoercionJS
+                                            if (1 == cell_date.length) {
+                                                cell_date = '0' + cell_date
+                                            }
+                                            var cell_mon = `${month + 1}`
+                                            // noinspection EqualityComparisonWithCoercionJS
+                                            if (1 == cell_mon.length) {
+                                                cell_mon = '0' + cell_mon
+                                            }
+                                            sessionStorage.setItem("selected_day", cell_date)
+                                            {#cell.setAttribute("selected_day", cell_date);#}
+                                            sessionStorage.setItem("selected_mon", cell_mon)
+                                            sessionStorage.setItem("selected_year", year)
+                                            const mydate = document.getElementById("mydate")
+                                            mydate.value = cell_date + '/' + cell_mon + '/' + year
+                                        })
+                                        break
+                                    }
+                                    row.appendChild(cell);
+                                    date++;
+                                }
                             }
-                            cell.date = `${date}`
-                            cell.addEventListener("click", function (event) {
-                                var cell_date = event.currentTarget.date
-                                // noinspection EqualityComparisonWithCoercionJS
-                                if (1 == cell_date.length) {
-                                    cell_date = '0' + cell_date
-                                }
-                                var cell_mon = `${month + 1}`
-                                // noinspection EqualityComparisonWithCoercionJS
-                                if (1 == cell_mon.length) {
-                                    cell_mon = '0' + cell_mon
-                                }
-                                sessionStorage.setItem("selected_day", cell_date)
-                                sessionStorage.setItem("selected_mon", cell_mon)
-                                sessionStorage.setItem("selected_year", year)
-                                const mydate = document.getElementById("mydate")
-                                mydate.value = cell_date + '/' + cell_mon + '/' + year
-                            })
-                            // cell.setAttribute("style", "textColor=#fff")
-                            // TODO: если в avail_days есть данный номер дня, задавать нужный стиль
-                            row.appendChild(cell);
-                            date++;
+                            tbl.appendChild(row);
                         }
                     }
-                    tbl.appendChild(row);
-                }
-            }
 
-            function daysInMonth(iMonth, iYear) {
-                return 32 - new Date(iYear, iMonth, 32).getDate();
-            }
+                    function daysInMonth(iMonth, iYear) {
+                        return 32 - new Date(iYear, iMonth, 32).getDate();
+                    }
         </script>
         <script>
             const mydate = document.getElementById('mydate');
