--- a/templates/equipment.html
+++ b/templates/equipment.html
@@ -166,9 +166,11 @@
             gives the significant part of
             TEC then TEC variations can be studied and analyzed in the same manner
             as NmF2 temporal dynamics in
-            ionosonde studies.</p>
+            ionosonde studies.
+            <br>
+        </p>
         <div class="data">
-            <p style="font-family: 'Roboto', sans-serif;">BROWSE DATA</p>
+            <a href="/date-selection" class="btn" style="">Browse data</a>
         </div>
     </div>
     <div class="container px-4 py-5" id="main-contents">
@@ -209,9 +211,7 @@
             }
         </style>
         <div class="data">
-            <a href="/date-selection" class="btn"
-               style="">Browse
-                data</a>
+            <a href="/date-selection" class="btn" style="">Browse data</a>
             {#            <p style="font-family: 'Roboto', sans-serif;">BROWSE DATA</p>#}
         </div>
     </div>
@@ -229,9 +229,11 @@
             saved in the Rinex 3.02 format.
             Based on the results of the measurements, the variations of the TEC
             for each satellite-receiver beam
-            are calculated.</p>
+            are calculated.
+            <br>
+        </p>
         <div class="data">
-            <p style="font-family: 'Roboto', sans-serif;">BROWSE DATA</p>
+            <a href="/date-selection" class="btn" style="">Browse data</a>
         </div>
     </div>
 
@@ -263,9 +265,11 @@
                     - GPS L1/L2/L5<br>
                     - GLONASS L1/L2<br>
                     - SBAS L1/L5<br>
-                    - 1 Hz update rate</p>
+                    - 1 Hz update rate
+                    <br>
+                </p>
                 <div class="data">
-                    <p style="font-family: 'Roboto', sans-serif;">BROWSE DATA</p>
+                    <a href="/date-selection" class="btn" style="">Browse data</a>
                 </div>
             </div>
             {#        </div>#}
@@ -277,9 +281,11 @@
                 <p style="font-family: 'Roboto', sans-serif;">latitude: 54°57´<br>
                     longitude: 37°46´<br><br>
                     - GPS L1/L2/L5<br>
-                    - 1 Hz update rate</p>
+                    - 1 Hz update rate
+                    <br>
+                </p>
                 <div class="data">
-                    <p style="font-family: 'Roboto', sans-serif;">BROWSE DATA</p>
+                    <a href="/date-selection" class="btn" style="">Browse data</a>
                 </div>
             </div>
             {#        </div>#}
@@ -291,9 +297,11 @@
                 <p style="font-family: 'Roboto', sans-serif;">latitude: 54°57´<br>
                     longitude: 37°46´<br><br>
                     - GPS L1/L2/L5<br>
-                    - 1 Hz update rate</p>
+                    - 1 Hz update rate
+                    <br>
+                </p>
                 <div class="data">
-                    <p style="font-family: 'Roboto', sans-serif;">BROWSE DATA</p>
+                    <a href="/date-selection" class="btn" style="">Browse data</a>
                 </div>
             </div>
         </div>
