--- a/templates/index.html
+++ b/templates/index.html
@@ -244,8 +244,30 @@
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 </div>
                 <div>
-                    <a href="/date-selection" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                     <style>
+                        .btn {
+                            display: inline-flex;
+                            background: #68819a;
+                        {#font-size: 16px;#}
+                            width: 150px;
+                            height: 45px;
+                            color: #ffffff;
+                            font-size: 18px;
+                            font-family: 'Roboto', sans-serif;
+                            border: #68819a;
+                            border-radius: 8px;
+                            margin: auto;
+                            justify-content: center;
+                            align-items: center;
+                            vertical-align: center;
+                        }
+                        .btn:hover {
+                            background: #576f88;
+                            color: #f8f6f6;
+                        }
+                     </style>
+                    <a href="/date-selection" class="btn">
+{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
                         VLF data
                     </a>
                 </div>
@@ -254,8 +276,8 @@
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 </div>
                 <div>
-                    <a href="/equipment" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                    <a href="/equipment" class="btn">
+{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
                         Equipment
                     </a>
                 </div>
@@ -264,8 +286,8 @@
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 </div>
                 <div>
-                    <a href="/stats" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                    <a href="/stats" class="btn">
+{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
                         Data
                     </a>
                 </div>
@@ -274,8 +296,8 @@
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 </div>
                 <div>
-                    <a href="/contacts" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                    <a href="/contacts" class="btn">
+{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
                         Contacts
                     </a>
                 </div>
