--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -13,9 +13,9 @@
 {% load static %}
 
 {% block content %}
-<body style='background-color: #dadfe0'>
+    <body style='background-color: #dadfe0'>
     <div class="container px-4 py-5" id="main-contents">
-        <br>
+{#        <br>#}
         <style>
             .btn {
                 float: left;
@@ -35,108 +35,214 @@
         </style>
         <a href="/date-selection" class="btn">Back to date picker</a>
         <a href="/" class="btn" style="float: right;">To Home Page</a>
-        <br>
+{#        <br>#}
     </div>
-    <span class="fs-2"></span><br/>
+    <span class="fs-2"></span>
     <div class="fw-bold">{% if success %}{{ date_test }}
         <style>
-            .card_fig {
-                margin: auto;
-                display: block;
-                border-radius: 10px;
-                align-items: center;
-                justify-content: center;
-                height: 4000px;
-                width: 90%;
-            / / left: 50 %;
-                background: #c6d2da;
-                flex-shrink: 2;
-                text-decoration: none;
-                color: white;
-                vertical-align: middle;
-                border: none;
+            {#.card_fig {#}
+            {#    margin: auto;#}
+            {#    display: block;#}
+            {#    border-radius: 10px;#}
+            {#    align-items: center;#}
+            {#    justify-content: center;#}
+            {#    height: 4000px;#}
+            {#    width: 90%;#}
+            {#/ / left: 50 %;#}
+            {#    background: #c6d2da;#}
+            {#    flex-shrink: 2;#}
+            {#    text-decoration: none;#}
+            {#    color: white;#}
+            {#    vertical-align: middle;#}
+            {#    border: none;#}
+            {#}#}
+            {##}
+            {#.vlf_picture {#}
+            {#    margin: auto;#}
+            {#    display: block;#}
+            {#    border-radius: 10px;#}
+            {#    align-items: center;#}
+            {#    justify-content: center;#}
+            {#    height: 4000px;#}
+            {#    width: 90%;#}
+            {#/ / left: 50 %;#}
+            {#    background: #c6d2da;#}
+            {#    flex-shrink: 2;#}
+            {#    text-decoration: none;#}
+            {#    color: white;#}
+            {#    vertical-align: middle;#}
+            {#    border: none;#}
+            {#}#}
+            {##}
+            {#.fig {#}
+            {#/ / align-items: stretch;#}
+            {#    align-items: center;#}
+            {#    border: none;#}
+            {#}#}
+            {##}
+            {#.card_block {#}
+            {#    display: flex;#}
+            {#    flex-direction: column;#}
+            {#    align-items: flex-start;#}
+            {#    border: none;#}
+            {#}#}
+            {##}
+            {#.card {#}
+            {#    margin: auto;#}
+            {#    display: block;#}
+            {#    border: none;#}
+            {#}#}
+
+            .btn-previous {
+                float: left;
+                display: inline-block;
+                background: #8e9798;
+                font-size: 20px;
+                color: #fcfafa;
+                font-family: 'Roboto', sans-serif;
+                width: 130px;
+                {#border: #c1d1d3;#}
+                {#height: 30px;#}
+                {#width: 26px;#}
+                border-radius: 5px;
+                border: 1px solid #8e9798;
             }
 
-            .vlf_picture {
-                margin: auto;
-                display: block;
-                border-radius: 10px;
-                align-items: center;
-                justify-content: center;
-                height: 4000px;
-                width: 90%;
-            / / left: 50 %;
-                background: #c6d2da;
-                flex-shrink: 2;
-                text-decoration: none;
-                color: white;
-                vertical-align: middle;
-                border: none;
+            .btn-previous:hover {
+                background: #7b8283;
+                {#color: #f8f6f6;#}
+                border: 1px solid #7b8283;
             }
 
-            .fig {
-            / / align-items: stretch;
-                align-items: center;
-                border: none;
+            .btn-next {
+                float: right;
+            {#display: inline-flex;#} display: inline-block;
+                background: #8e9798;
+                font-size: 20px;
+                color: #fcfafa;
+                font-family: 'Roboto', sans-serif;
+                border-radius: 5px;
+                {#border: #c1d1d3;#}
+                {#height: 30px;#}
+                width: 130px;
+                border: 1px solid #8e9798;
+            {#justify-content: center;#}{#align-items: center;#}{#vertical-align: center;#}
             }
 
-            .card_block {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                border: none;
-            }
-
-            .card {
-                margin: auto;
-                display: block;
-                border: none;
+            .btn-next:hover {
+                background: #7b8283;
+                {#color: #f8f6f6;#}
+                border: 1px solid #7b8283;
             }
         </style>
         {% if no_data %}
             <span style="align-items: center;">NO DATA</span>
         {% else %}
-{#            <body>#}
+
+        <form method="post" id="date_form">
+{#            <div style="margin: 0 auto; width: 280px; height: 45px;">#}
+{#                <div style="position:relative">#}
+{#                    <input id="mydate" name="mydate" type="text" class="form-control"#}
+{#                           style="font-family: 'Roboto', sans-serif;"#}
+{#                           placeholder="DD/MM/YYYY">#}
+{#                </div>#}
+{#            </div>#}
+            <div class="container px-4 py-5" id="main-contents">
+                <input class="btn-previous" type="submit" formaction="/get-vlf-data" value="Previous day" onclick="previous()">
+                {#                    <input class="btn btn-info" type="button" style="display: inline-block; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5;" value=&#8249; onclick="previous()">#}
+                {#                    <input class="btn btn-info" type="button" style="display: inline-block; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5;" value=&#8250; onclick="next()">#}
+                <input class="btn-next" type="submit" formaction="/get-vlf-data" value="Next day" onclick="next()">
+                <input type="hidden" id="button_name" name="button_name" value="">
+                <input type="hidden" id="new_day" name="new_day" value="">
+                <input type="hidden" id="new_month" name="new_month" value="">
+                <input type="hidden" id="new_year" name="new_year" value="">
+
+                {#                    <div class="arrow" id="previous" type="button" style="cursor: pointer; display: inline-block; zoom: 1; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5; border-radius: 4px; padding: 5px 10px;" onclick="previous()">&#8249;</div>#}
+                {#                    <div class="btn btn-info" id="next" type="button" style="cursor: pointer; display: inline-block; zoom: 1; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5; border-radius: 4px; padding: 5px 10px;" onclick="next()">&#8250;</div>#}
+            </div>
+        </form>
+
+            <script>
+                currentMonth = {{ current_month }} -1;
+                currentYear = {{ current_year }};
+                {#selectYear = document.getElementById("year");#}
+                {#selectMonth = document.getElementById("month");#}
+                currentDay = {{ current_day }};
+                nextDay = {{ next_day }};
+                nextMonth = {{ next_month }};
+                nextYear = {{ next_year }};
+                prevDay = {{ prev_day }};
+                prevMonth = {{ prev_month }};
+                prevYear = {{ prev_year }};
+                {#selectDay = document.getElementById("day");#}
+
+                // TODO: заполнять месяц, день и год так, как они приходят;
+
+                function next() {
+                    const new_day = document.getElementById("new_day");
+                    new_day.value = nextDay;
+                    const new_month = document.getElementById("new_month");
+                    new_month.value = nextMonth;
+                    const new_year = document.getElementById("new_year");
+                    new_year.value = nextYear;
+                    const button_name = document.getElementById("button_name");
+                    button_name.value = 'next';
+                }
+
+                function previous() {
+                    const new_day = document.getElementById("new_day");
+                    new_day.value = prevDay;
+                    const new_month = document.getElementById("new_month");
+                    new_month.value = prevMonth;
+                    const new_year = document.getElementById("new_year");
+                    new_year.value = prevYear;
+                    const button_name = document.getElementById("button_name");
+                    button_name.value = 'previous';
+                }
+            </script>
+
             <style>
                 .img1 {
-                /*padding: 0;*/
-                /*margin: 0 auto auto 0;*/
-                margin: auto;
-                width: 100%;
-                max-width: 900px;
-                display: block;
-                align-items: center;
-                justify-content: center;
-            }
+                    /*padding: 0;*/
+                    /*margin: 0 auto auto 0;*/
+                    margin: auto;
+                    width: 100%;
+                    max-width: 900px;
+                    display: block;
+                    align-items: center;
+                    justify-content: center;
+                }
             </style>
-{#            <a class="card_fig row d-flex" style="align-items: center" id="card_fig">#}
-                <picture>
-                    {% for image in images %}
-{#                        (width, height) = image.size#}
-                        <img class="img1" id="img_{{ image }}" src='{{ image }}' width=100%
-                             style="display: block; align-items: center; justify-content: center; object-position: center;"/>
-                    {% endfor %}
-                </picture>
+            {#            <a class="card_fig row d-flex" style="align-items: center" id="card_fig">#}
+            <picture>
+                {% for image in images %}
+                    {#                        (width, height) = image.size#}
+                    <img class="img1" id="img_{{ image }}" src='{{ image }}' width=100%
+                         style="display: block; align-items: center; justify-content: center; object-position: center;"/>
+                {% endfor %}
+            </picture>
             </a>
-{#            </body>#}
+            {#            </body>#}
             <script>
                 let h = 0;
                 {% for image in images %}
                     h = document.getElementById('img_{{ image }}').height;
                 {% endfor %}
                 const card_fig = document.getElementById('card_fig');
-                card_fig.height = {{ num_pics }} * h;
+                card_fig.height =
+                {{ num_pics }} *
+                h;
             </script>
         {% endif %}
     {% else %}Ваш запрос завершился с ошибкой.{% endif %}</div>
-</body>
-{#<div class="container px-4 py-5" id="main-contents">#}
-{#    <footer class="footer pt-3 mt-4 text-muted border-top"#}
-{#            style="font-family: 'Roboto', sans-serif; border-bottom: 1px solid #918e8e;">© IDG RAS#}
-{#        <br>#}
-{#            Institute of geosphere dynamics of Russian academy of sciences#}
-{#    </footer>#}
-{#</div>#}
+    </body>
+    {#<div class="container px-4 py-5" id="main-contents">#}
+    {#    <footer class="footer pt-3 mt-4 text-muted border-top"#}
+    {#            style="font-family: 'Roboto', sans-serif; border-bottom: 1px solid #918e8e;">© IDG RAS#}
+    {#        <br>#}
+    {#            Institute of geosphere dynamics of Russian academy of sciences#}
+    {#    </footer>#}
+    {#</div>#}
     {#    <h2 class="pb-2 border-bottom">Комментарий</h2>#}
     {#    <p>{{ comment }}</p>#}
 {% endblock %}
