--- a/templates/date_selection.html
+++ b/templates/date_selection.html
@@ -168,15 +168,10 @@
                 <div class="button-container-calendar">
                     <input class="btn-previous" type="submit" formaction="/get-vlf-data" value=&#8249;
                            onclick="previous()">
-                    {#                    <input class="btn btn-info" type="button" style="display: inline-block; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5;" value=&#8249; onclick="previous()">#}
-                    {#                    <input class="btn btn-info" type="button" style="display: inline-block; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5;" value=&#8250; onclick="next()">#}
                     <input class="btn-next" type="submit" formaction="/get-vlf-data" value=&#8250; onclick="next()">
                     <input type="hidden" id="selected_new_month" name="selected_new_month" value="">
                     <input type="hidden" id="new_month" name="new_month" value="">
                     <input type="hidden" id="new_year" name="new_year" value="">
-
-                    {#                    <div class="arrow" id="previous" type="button" style="cursor: pointer; display: inline-block; zoom: 1; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5; border-radius: 4px; padding: 5px 10px;" onclick="previous()">&#8249;</div>#}
-                    {#                    <div class="btn btn-info" id="next" type="button" style="cursor: pointer; display: inline-block; zoom: 1; background: #00a2b7; color: #fff; border: 1px solid #0aa2b5; border-radius: 4px; padding: 5px 10px;" onclick="next()">&#8250;</div>#}
                 </div>
                 <table class="table-calendar" id="calendar" data-lang="en">
                     <thead id="thead-month"></thead>
@@ -185,10 +180,7 @@
                 <div class="footer-container-calendar">
                     <label for="month" style="font-family: 'Roboto', sans-serif;">Select
                         month and year </label>
-                    {#                    <form method="post" onsubmit="submitMonth()">#}
                     <select id="month" onchange="jump()">
-                        {#                    <form method="get" id="Month">#}
-                        {#                        <select id="month" onchange="document.getElementById('Month').submit()">#}
                         <option value=0>Jan</option>
                         <option value=1>Feb</option>
                         <option value=2>Mar</option>
@@ -202,12 +194,7 @@
                         <option value=10>Nov</option>
                         <option value=11>Dec</option>
                     </select>
-                    {#                    <input type="hidden" id="selected_new_month" name="selected_new_month" value="">#}
-                    {#                    <input type="hidden" id="new_month" name="new_month" value="">#}
-                    {#                    <input type="submit" onclick="">#}
-                    {#                    </form>#}
                     <select id="year" onchange="jump()"></select>
-                    {#                    <input type="hidden" id="new_year" name="new_year" value="">#}
                 </div>
             </div>
         </div>
@@ -294,7 +281,7 @@
                 {#showCalendar(currentMonth, currentYear);#}
             }
 
-            function current_mon() {
+            function view_date() {
                 currentYear = {{ current_year }};
                 currentMonth = {{ current_month }} -1;
                 const new_month = document.getElementById("new_month");
@@ -307,7 +294,7 @@
             function jump() {
                 currentYear = parseInt(selectYear.value);
                 currentMonth = parseInt(selectMonth.value);
-                showCalendar(currentMonth, currentYear);
+                //showCalendar(currentMonth, currentYear);
                 const new_month = document.getElementById("new_month");
                 new_month.value = currentMonth;
                 const new_year = document.getElementById("new_year");
@@ -401,7 +388,7 @@
             }
         </script>
         <div class="row px-5 py-2">
-            <button type="submit" formaction="/get-vlf-data" class="btn btn-info" onclick="current_mon()"
+            <button type="submit" formaction="/get-vlf-data" class="btn btn-info" onclick="view_date()"
                     style="font-family: 'Roboto', sans-serif; font-size: 20px; color: white; margin: 0 auto; background-color: #00a2b7; width: 150px; height: 45px; border: #00a2b7; display: inline-block">
                 View
             </button>
