--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -147,7 +147,7 @@
     </style>
     <div id="sideNavigation" class="sidenav">
         <a href="#" class="close-btn">&times;</a>
-        <a href="#" style="font-family: 'Roboto', sans-serif;">Data</a>
+        <a href="/data" style="font-family: 'Roboto', sans-serif;">Data</a>
         <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>
         <a href="/equipment" style="font-family: 'Roboto', sans-serif;">Equipment</a>
         <a href="/contacts" style="font-family: 'Roboto', sans-serif;">Contacts</a>
