--- a/templates/equipment.html
+++ b/templates/equipment.html
@@ -232,9 +232,9 @@
             are calculated.
             <br>
         </p>
-        <div class="data">
-            <a href="/date-selection" class="btn" style="">Browse data</a>
-        </div>
+{#        <div class="data">#}
+{#            <a href="/date-selection" class="btn" style="">Browse data</a>#}
+{#        </div>#}
     </div>
 
     {#    <div id="main">#}
