--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
     </style>
     <div id="sideNavigation" class="sidenav">
         <a href="#" class="close-btn">&times;</a>
-        <a href="#" style="font-family: 'Roboto', sans-serif;">Data</a>
+        <a href="/data" style="font-family: 'Roboto', sans-serif;">Data</a>
         <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>
         <a href="/equipment" style="font-family: 'Roboto', sans-serif;">Equipment</a>
         <a href="/contacts" style="font-family: 'Roboto', sans-serif;">Contacts</a>
@@ -176,14 +176,6 @@
         </script>
     </nav>
     <br>
-
-    {#    <section id="main">#}
-    {#      <h1>This Side Navigation Menu Looks Good!</h1>#}
-    {#      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>#}
-    {#    </section>#}
-    {#    <div class="container">#}
-
-    <!--        <div class="p-5 mb-4 bg-light rounded-3" id="title-box" style="border-radius: 30px;">-->
     <style>
         .img1 {
             /*padding: 0;*/
@@ -286,7 +278,7 @@
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 </div>
                 <div>
-                    <a href="/stats" class="btn">
+                    <a href="/data" class="btn">
 {#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
                         Data
                     </a>
