--- a/templates/data.html
+++ b/templates/data.html
@@ -18,6 +18,7 @@
 
         h1 {
             font-size: 30px;
+            text-align: justify;
         }
 
         .box-container {
@@ -60,6 +61,7 @@
             width: 200px;
             display: flex;
             justify-content: center;
+            {#align-items: center;#}
             align-items: center;
             font-family: 'Roboto', sans-serif;
             {#vertical-align: center;#}
