--- a/templates/date_selection.html
+++ b/templates/date_selection.html
@@ -172,6 +172,7 @@
                     <input type="hidden" id="selected_new_month" name="selected_new_month" value="">
                     <input type="hidden" id="new_month" name="new_month" value="">
                     <input type="hidden" id="new_year" name="new_year" value="">
+                    <input type="hidden" id="source" name="source" value="{{ source }}">
                 </div>
                 <table class="table-calendar" id="calendar" data-lang="en">
                     <thead id="thead-month"></thead>
